# cpu-path-tracing

./: .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: CompilerWarnings.cmake  Doxygen.cmake  OpenMP.cmake  StandardProjectSettings.cmake
sandbox/: main.cpp  run.sh
scripts/: check-cmake-format.sh  clang-build.sh  clang-format.sh  clang-latest.scm  clang-tidy.sh  clang.sh  delete.sh  gcc-build.sh  gcc-latest.scm  gcc.sh  precommit.sh  release.sh  run-cmake-format.sh
src/: CMakeLists.txt  box_mirror_scene.hpp  box_scene.hpp  camera.cpp  camera.hpp  constants.hpp  hit_record.cpp  hit_record.hpp  main.cpp  random_state.cpp  random_state.hpp  ray.cpp  ray.hpp  reflection.hpp  scene.hpp  simple_scene.hpp  smallpt_scene.hpp  sphere.cpp  sphere.hpp  utils.cpp  utils.hpp  vec.cpp  vec.hpp
